--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualize the height data distribution before and after mean normalization \n"
+    "# Visualize the height data distribution before and after mean normalization \n",
+    "% matplotlib inline\n",
+    "height = mean_normalize(data.height)\n",
+    "import seaborn as sns\n",
+    "sns.distplot(data.height)\n",
+    "sns.distplot(height);"
    ]
   },
   {
